evaluations/penalites1/Jouer.java.txt
./allumettes/Arbitre.java:24: error: illegal start of type
	 */
	 ^
1 error
